# cleanapp_back_end_v2

./: .gcloudignore  .gitignore  .golangci.yml  ARCHITECTURE.md  AREAS_SERVICE_MIGRATION.md  CLAUDE.md  CODEX_SCRATCHPAD.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  DEVELOP_AND_DEPLOY.md  Dockerfile  INVARIANTS.md  Makefile  OPTIMIZATION_STATUS.md  README.md  REPORT_AUTH_MIGRATION_SUMMARY.md  REPORT_SUBMISSION_WITH_TAGS_FLOW.md  SYNC_DOCUMENTATION.md  THEORY.md  WHY.md  areas_aggr.sql  b.sh  build.sh  build_all.sh  build_and_deploy.sh  d.sh  deploy_prod.sh  dev_backend.env  dev_docker_compose.yml  dev_frontend.env  dietlimoos.geojson  docker.sh  extract_cleanapp_image.py  go.mod  go.sum  img_bytes_out  lastnreps.sql  new_table.sql  prod_backend.env  prod_docker_compose.yml  (+17 more)
api/: api.go  endpoints.go
areas-service/: Dockerfile  README.md  build_image.sh  docker-compose.yml  go.mod  go.sum  main.go
areas_import/: import_areas.ipynb
auth-service/: Dockerfile  README.md  REPORT_AUTHORIZATION_API.md  build_image.sh  docker-compose.yml  go.mod  go.sum  main.go  test_report_auth.sh
backend/: Dockerfile  db.go  main.go  map.go  map_aggr.go  referral.go  report.go  server.go  user.go
be/: aggregator.go  aggregator_test.go  db.go  db_test.go  help.go  map.go  map_aggr.go  map_aggr_s2.go  map_aggr_s2_test.go  map_aggr_test.go  privacy.go  read_report.go  ref_gen.go  referral.go  referrals_redeem.go  report.go  server.go  stats.go  teams.go  top_scores.go  user.go
brand-dashboard/: Dockerfile  Makefile  README.md  SETUP_SUMMARY.md  build_image.sh  docker-compose.yml  go.mod  go.sum  main.go
client/: main.go
common/: db.go  log.go
custom-area-dashboard/: .gitignore  .version  Dockerfile  Dockerfile.template  Makefile  README.md  WEBSOCKET_README.md  areas-devconnect-2025.geojson  areas-edge-city.geojson  areas-new-york.geojson  build_image.sh  build_images.sh  go.mod  go.sum  main.go  test_websocket_client.html
customer-service/: .air.toml  .env.example  .gitignore  .version  Dockerfile  Makefile  README.md  all-in-1.sh  build_image.sh  combined-project.txt  docker-compose.yml  go.mod  go.sum  go.sum.note  main.go
db/: Dockerfile  backup.sh  build_db_image.sh  init.sql  misc_notes.md  setup.sql
db-replica/: Dockerfile  build_db_image.sh
docker/: .version  Dockerfile  build_server_image.sh  docker-compose.yml
docker_backend/: .version  Dockerfile  build_image.sh  cloudbuild.yaml
docker_pipeline/: Dockerfile  build_image.sh
docker_pipelines/: .version  Dockerfile  build_image.sh  cloudbuild.yaml
docker_referrals/: .version  Dockerfile  build_image.sh
docs/: INGEST_V1.md  case-contact-discovery-2026-03-11.md  cleanapp-cases.md  cleanapp-wire.md  security-hardening-2026-03-11.md
email-fetcher/: Cargo.toml  Dockerfile  README.md  build_image.sh  entrypoint.sh
email-fetcher/src/: main.rs
email-fettcher/: Dockerfile  README.md
email-service/: API_ENDPOINT_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_MIGRATION.md  CONFIGURATION_MIGRATION_SUMMARY.md  DIGITAL_REPORTS_TEMPLATE_UPDATE.md  Dockerfile  GIN_FRAMEWORK_MIGRATION.md  GIN_MIGRATION_SUMMARY.md  IMPLEMENTATION_NOTES.md  INFERRED_CONTACTS_MAP_IMAGES.md  INFERRED_EMAILS_IMPLEMENTATION.md  Makefile  NIL_FEATURE_HANDLING_UPDATE.md  (+15 more)
email-service-v3/: Cargo.toml  Dockerfile  README.md  build_image.sh
email-service-v3/src/: config.rs  db.rs  email.rs  lib.rs  models.rs  util.rs
news-indexer/: Cargo.toml  Dockerfile.analyzer_twitter  Dockerfile.index_twitter  Dockerfile.submitter_twitter  Dockerfile.twitter_all  build_images.sh  cloudbuild.all.yaml  cloudbuild.analyzer.yaml  cloudbuild.indexer.yaml  cloudbuild.submitter.yaml  config.toml
news-indexer-bluesky/: Cargo.toml  Dockerfile.bluesky_all  Dockerfile.bluesky_now  build_images.sh  cloudbuild.all.yaml  cloudbuild.bluesky_now.yaml
news-indexer-bluesky/src/: indexer_bluesky_schema.rs
news-indexer/scripts/: reset_twitter_dev.sh
news-indexer/src/: indexer_twitter_schema.rs  main.rs
rabbitmq-publisher/: Cargo.toml  README.md
rabbitmq-publisher/src/: main.rs
rabbitmq-subscriber/: Cargo.toml  README.md
rabbitmq-subscriber/src/: main.rs
replier-twitter/: Cargo.toml  Dockerfile  build_image.sh  cloudbuild.yaml
replier-twitter/src/: main.rs
report-fast-renderer/: .dockerignore  Cargo.toml  Dockerfile  build_image.sh  cloudbuild.yaml  run_local.sh
report-fast-renderer/src/: config.rs  db.rs  handlers.rs  main.rs  model.rs  reports_memory.rs  subscriber.rs
report-listener-v4/: Cargo.toml  Dockerfile  build_image.sh
report-listener-v4/src/: cfg.rs  db.rs  main.rs  models.rs  openapi.rs  security.rs
report-tags/: .version  Cargo.toml  Dockerfile  Makefile  RABBITMQ_SETUP.md  README.md  TESTING.md  build_image.sh  docker-compose.yml  env.example  test_api.sh  test_docker_build.sh
report-tags/src/: app_state.rs  config.rs  main.rs  models.rs
report-tags/src/database/: mod.rs  schema.rs
report-tags/src/handlers/: feed.rs  follows.rs  health.rs  mod.rs  suggestions.rs  tags.rs  version.rs
report-tags/src/rabbitmq/: messages.rs  mod.rs  publisher.rs  subscriber.rs
report-tags/src/services/: feed_service.rs  mod.rs  tag_service.rs
report-tags/src/utils/: normalization.rs
reports-pusher/: Cargo.toml  Dockerfile  build.rs  build_image.sh
reports-pusher/src/: main.rs
rustlib/rabbitmq/: Cargo.toml
rustlib/rabbitmq/src/: lib.rs  subscriber.rs
scripts/analyzer-manual-reconciliation/: Cargo.toml  README.md
scripts/analyzer-manual-reconciliation/src/: main.rs
tools/reddit_dump_reader/: Cargo.toml  README.md
tools/reddit_dump_reader/src/: main.rs
tools/reddit_funnel/: Cargo.toml  README.md
tools/reddit_funnel/data/: brand_dictionary.json  issue_keywords.txt  subreddit_priors.json
tools/reddit_funnel/python/: calibration_analysis.py  create_calibration_sample.py  ingest_to_cleanapp.py  stage2_batched.py  stage2_enrich.py  stage2_final.py  stage2_postprocess.py  stage2_postprocess_v2.py  stage2_sharded.py  stage2_v2.py  stage2_worker.py  stage3_cluster.py  stage3_cluster_v2.py  stage3_final.py
tools/reddit_funnel/src/: main.rs
(+1244 files in other folders)
