[package]
name = "email-service-v3"
version = "0.1.0"
edition = "2021"

[lib]
name = "email_service_v3"
path = "src/lib.rs"

[[bin]]
name = "email-service-v3"
path = "src/bin/service.rs"

[[bin]]
name = "email-service-v3-backfill"
path = "src/bin/backfill.rs"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
humantime = "2"
mysql = "24"
regex = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

