[package]
name = "news-indexer-bluesky"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index_bluesky"
path = "src/bin/index_bluesky.rs"

[[bin]]
name = "analyzer_bluesky"
path = "src/bin/analyzer_bluesky.rs"

[[bin]]
name = "submitter_bluesky"
path = "src/bin/submitter_bluesky.rs"

[[bin]]
name = "bluesky_now"
path = "src/bin/bluesky_now.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
mysql_async = "0.34"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"

