[package]
name = "rabbitmq-subscriber"
version = "0.1.0"
edition = "2021"
description = "Standalone RabbitMQ Subscriber Application"
authors = ["CleanApp Team"]
license = "MIT"

[[bin]]
name = "rabbitmq-subscriber"
path = "src/main.rs"

[dependencies]
cleanapp_rustlib = { path = "vendor/cleanapp_rustlib" }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.8"
