[package]
name = "replier-twitter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
mysql_async = "0.34"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
cleanapp_rustlib = { path = "vendor/cleanapp_rustlib" }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
urlencoding = "2.1"
rand = "0.8"
time = "=0.3.44"
