[package]
name = "report-fast-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
cleanapp_rustlib = { path = "vendor/cleanapp_rustlib" }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.5", features = ["cors", "trace", "compression-full", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.17"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid", "yaml"] }
mysql = "26.0.1"
