[package]
name = "rabbitmq"
version = "0.1.0"
edition = "2021"
description = "RabbitMQ Publisher & Subscriber Library for Rust"
authors = ["CleanApp Team"]
license = "MIT"

[dependencies]
lapin = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"
