[package]
name = "reddit_dump_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd", "xz"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
env_logger = "0.11"
urlencoding = "2"
