[package]
name = "reddit_funnel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-compression = { version = "0.4", features = ["tokio", "zstd", "gzip", "xz"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1"
regex = "1"
sha1 = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2"
aho-corasick = "1"
unicode-segmentation = "1"
chrono = { version = "0.4", features = ["serde"] }
